syntax = "proto3";
package gedit.product;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.product.product.grpc";
option java_outer_classname = "ProductProto";
option objc_class_prefix = "GDA";

import "gedit/common.proto";

// The store service definition.
service ProductApi {
    rpc Get (GetProductRequest) returns (ProductResponse) {
    }

    rpc List (ListProductRequest) returns (stream ProductResponse) {
    }
}

message GetProductRequest{
    string uuid = 1;
}

message ListProductRequest{
    string parentUuid = 1;
}

message ProductResponse{
    Status status = 999;
    Product product = 1;
}

message Product{
    string uuid = 1;
    string name = 2;
    string iconUrl = 3;
}
